@@ -35,3 +35,4 @@
   20-Jun-2020    V0.42 Add method fetchSequenceList() to fetch fasta sequences
   22-Jun-2020    V0.43 Add methods to return SeqAlign() from SIFTS data.
   23-Aug-2020    V0.43 Adjust InterPro ftp URL references.
+   9-Oct-2020    V0.44 Add organism host taxonomy
